required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- include PNG libs first (#3046)

- merge graphics branch: RFC54 implementation, cairo rendering (png, svg, pdf),
  opengl rendering (non functionnal yet)

- Do pre-emptive test for map.extent/layer.extent interaction (#3043)

- Add centroid geomtransform (#2825)

- Test database connections before using them (#2932)

- Support non-numeric join criteria (#2006)

- Ensure there's enough room in the SQL to hold a long (#1284)

- Fix filter error in multi-clause filters (#2937)

- Fix agg freetype character lookup when no unicode charmap is present (#3018)

- Fix memory leak in SQL building (#2997)

- Fork AGG rendering library in our trunk

- Fixed a memory leak when unescaping quotes in	logical	expressions (#2938)

- Fixed template code for item, shpxy and extent tags to properly initialize tag arguments in cases
  where there are mutiple tags in one chunk of template (#2990)

- Fix mapogcfilter.c not to cause syntax error if PROJ.4 is not compiled in (#2987)

- Rework Python MapScript's setup.py to be more like Python's to fix
  a number of issues including (#2637) and to use mapserver-config 
  and ditch the old mapscriptvars approach

- Prevent from changing the connection type to MS_RASTER when setConnectionType(MS_WMS) is used (#2908)

- Improve rounding logic for computing the src_xoff/yoff (#2976)

- Fix filename path processing for raster queries and WCS get coverage so 
  that non-filesystem filenames are not altered (#2901) 

- Improved security relative to untrusted directories and mapfiles (RFC 56)
